more data visualizations in ccp and k_neighbors

--- a/Lexperimento.ipynb
+++ b/Lexperimento.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ea452bf1-493b-4d1b-90b7-fef7dda9821b",
    "metadata": {
     "tags": []
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6edad2ed-adb3-4a94-9840-ce079ac7c9ce",
    "metadata": {
     "tags": []
@@ -241,7 +241,7 @@
        "[768 rows x 9 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9c91d5c3-882a-482f-8f0b-e737dc05d06b",
    "metadata": {
     "tags": []
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "586fc18f-9882-4744-b235-f862adc4f028",
    "metadata": {
     "tags": []
@@ -472,7 +472,7 @@
        "[724 rows x 9 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f5a86641-1244-4ff5-9f64-6daf744748f0",
    "metadata": {
     "tags": []
@@ -532,7 +532,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "922032c2-9305-49a9-b4bf-8cc742ba6c45",
    "metadata": {
     "tags": []
@@ -579,7 +579,7 @@
        " Text(0.9375, 0.125, 'entropy = 0.513\\nsamples = 70\\nvalue = [8, 62]\\nclass = Diabetes')]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -594,7 +594,7 @@
        "  <rdf:RDF xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n",
        "   <cc:Work>\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\n",
-       "    <dc:date>2023-09-27T09:26:30.262189</dc:date>\n",
+       "    <dc:date>2023-09-28T17:21:51.914819</dc:date>\n",
        "    <dc:format>image/svg+xml</dc:format>\n",
        "    <dc:creator>\n",
        "     <cc:Agent>\n",
@@ -3061,30 +3061,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "694272ed-0498-45d3-8186-1addb29c33c9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['BloodPressure', 'Age', 'Insulin', 'Glucose', 'BMI', 'Pregnancies',\n",
-       "       'SkinThickness', 'DiabetesPedigreeFunction'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "featureNames = X.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "5e18f8a8-0746-44a1-be03-797b68b3f7ff",
    "metadata": {
     "tags": []
@@ -3097,7 +3084,7 @@
        "       0.        , 0.        , 0.01655163])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3108,7 +3095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "fa9c4bf4-364f-4785-902d-c911a21b25c9",
    "metadata": {
     "tags": []
@@ -3187,7 +3174,7 @@
        "SkinThickness             0.000000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3196,6 +3183,212 @@
     "featureImportance = pd.DataFrame(clf.feature_importances_, index = featureNames).sort_values(0, ascending=False)\n",
     "featureImportance"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a46fbec6-7748-4e81-be87-231247162f9c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Set: \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.85      0.85       102\n",
+      "           1       0.64      0.63      0.64        43\n",
+      "\n",
+      "    accuracy                           0.79       145\n",
+      "   macro avg       0.74      0.74      0.74       145\n",
+      "weighted avg       0.78      0.79      0.79       145\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "print(\"Test Set: \")\n",
+    "print(classification_report(y_test, y_preds, target_names=['0','1']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f97df719-ef6d-40b0-b696-673bf37c26ea",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.625     , 0.375     ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.625     , 0.375     ],\n",
+       "       [1.        , 0.        ],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.625     , 0.375     ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.625     , 0.375     ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.625     , 0.375     ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.625     , 0.375     ],\n",
+       "       [0.9375    , 0.0625    ],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.625     , 0.375     ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.9375    , 0.0625    ],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.11428571, 0.88571429],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.85271318, 0.14728682],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.625     , 0.375     ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.6       , 0.4       ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.625     , 0.375     ],\n",
+       "       [0.39285714, 0.60714286],\n",
+       "       [0.39285714, 0.60714286]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f51e9e9c-3b07-4e37-8a59-72bede1ac2de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
